# RPFR-Richet

./: .gitignore  Check_Benchmark.xlsx  README.md  RPFR-CCSD(T)_DTQ (1).xlsx  pyproject.toml  requirements.txt
data/processed/spreadsheets/: Richet - RPFR & mol constans - diatoms.xlsx  Richet - RPFR & mol constans - isotopologues - comparison.xlsx  Richet - RPFR & mol constans - isotopologues - comparison_v1.xlsx  Richet - RPFR & mol constans - isotopologues - updated.xlsx  Richet - RPFR & mol constans - isotopologues - updated_v1.xlsx  Richet - RPFR & mol constans - isotopologues - updated_v2.xlsx  Richet - RPFR & mol constans - isotopologues - updated_v3.xlsx
data/raw/CCSD(T)/: 14C18O.7pointfit.out
data/raw/excel/: Diatomic molecule table.gsheet  Richet - RPFR & mol constans.xlsx
notebooks/: 01_rpfr_h2_example.ipynb  02_table4_replication.ipynb  03_rpfr_ccsdt_example.ipynb  04_amila_vs_experimental.ipynb  05_benchmark_comparison.ipynb
scripts/: compare_to_richet.py  compute_partition_functions.py  load_molecular_constants.py
src/richet_rpfr/: __init__.py  comparison.py  isotopes.py  molecular_constants.py  partition_functions.py  richet_tables.py
src/richet_rpfr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_comparison.py  test_isotopes.py  test_molecular_constants.py  test_partition_functions.py
