[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "richet-rpfr"
version = "0.1.0"
description = "Utilities for replicating Richet et al. (1977) RPFR tables"
authors = [{name = "Simon Andren"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
